// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableContainerPrimary ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-1 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  />
</div>
`;

exports[`TableContainerPrimary ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-paperRoot-2 MuiTableContainer-root MuiPaper-elevation0 MuiPaper-rounded"
  />
</div>
`;
